profile scroll && height fix on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
 @tailwind components;
 @tailwind utilities;
 
-body {
+body, html {
   width: 100%;
-  height: 100vh;
+  height: 100%;
 }
 
 #root {
